test/parser/prs/precharge-01.stderr
At: "precharge-01.hac":8:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(process-prototype) [5:1..35]
#STATE#	{ [5:37]
#STATE#	keyword: prs [6:1..3]
#STATE#	(null) 
#STATE#	{ [6:5]
#STATE#	(prs-literal) [8:3]
#STATE#	| [8:5]
#STATE#	{ [8:6]
in state #STATE#, possible rules are:
	prs_or : prs_or '|' . prs_and  (#RULE#)
	prs_internal_optional : .  (#RULE#)
acceptable tokens are: 
	'(' (shift)
	'@' (shift)
	'~' (shift)
	ID (reduce)
